# moth-os-server

./: .gitignore  Makefile  README.md  pyproject.toml
moth_os/: moth_os_server.py
moth_os/api/: __init__.py
moth_os/api/routes/: index.py  monitor.py  ping.py  version.py
moth_os/config/: moth_os.yaml
tests/: test_moth_os_server.py
