[tool.poetry]
name = "moth-os-server"
version = "0.1.0"
description = ""
authors = ["ChromaMaster <vladtel.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
